--- a/TestLead/TestLead/TestLead.csproj
+++ b/TestLead/TestLead/TestLead.csproj
@@ -52,10 +52,25 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="New Job.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="New Job.Designer.cs">
+      <DependentUpon>New Job.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Select Job.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Select Job.Designer.cs">
+      <DependentUpon>Select Job.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="New Job.resx">
+      <DependentUpon>New Job.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Select Job.resx">
+      <DependentUpon>Select Job.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
