--- a/TestLead/TestLead/TestLead.csproj
+++ b/TestLead/TestLead/TestLead.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="New Client.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="New Client.Designer.cs">
+      <DependentUpon>New Client.cs</DependentUpon>
+    </Compile>
     <Compile Include="New Job.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +74,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="New Client.resx">
+      <DependentUpon>New Client.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="New Job.resx">
       <DependentUpon>New Job.cs</DependentUpon>
