--- a/TestLead/TestLead/TestLead.csproj
+++ b/TestLead/TestLead/TestLead.csproj
@@ -46,11 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Entry Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Entry Form.Designer.cs">
+      <DependentUpon>Entry Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MTU Info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MTU Info.Designer.cs">
+      <DependentUpon>MTU Info.cs</DependentUpon>
     </Compile>
     <Compile Include="New Client.cs">
       <SubType>Form</SubType>
@@ -72,8 +78,11 @@
     <Compile Include="Select Job.Designer.cs">
       <DependentUpon>Select Job.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Entry Form.resx">
+      <DependentUpon>Entry Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MTU Info.resx">
+      <DependentUpon>MTU Info.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="New Client.resx">
       <DependentUpon>New Client.cs</DependentUpon>
