--- a/TestLead/TestLead/TestLead.csproj
+++ b/TestLead/TestLead/TestLead.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataSet.cs" />
     <Compile Include="Entry Form.cs">
       <SubType>Form</SubType>
     </Compile>
